--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -28,7 +28,7 @@ environment:
       QTDIR: C:\Qt\5.13\msvc2015_64
       QT_IF_VERSION: '3.0.1'
       PRJLIBS: VCRUNTIME140.dll MSVCP140.dll
-      BIN: Galaxy-Calculator
+      BIN: WeBookServer
       MY_ENV: AppVeyor
       QIF_PACKAGE_URI: 'packages\com.github.Light-Wizzard.WeBookServer\data'
 
@@ -107,7 +107,7 @@ after_build:
   - dir /b /s *.exe
   - mkdir deploy
   - copy "%APPVEYOR_BUILD_FOLDER%-build\%CONFIGURATION%\%BIN%.exe" "deploy\%BIN%.exe"
-  - windeployqt --qmldir "%APPVEYOR_BUILD_FOLDER%/qml" --%CONFIGURATION% "deploy/%BIN%.exe" --verbose=2
+  - windeployqt --%CONFIGURATION% "deploy/%BIN%.exe" --verbose=2
   - for %%I in (%PRJLIBS%) do copy %PRJLIBDIR%\%%I deploy\
   - 7z a -tzip "%BIN%-%CONFIGURATION%.zip" deploy -r
   - copy "%APPVEYOR_BUILD_FOLDER%-build\%BIN%-%CONFIGURATION%.zip" "%APPVEYOR_BUILD_FOLDER%\%BIN%-%CONFIGURATION%.zip"
