--- a/scinstall.bat.in
+++ b/scinstall.bat.in
@@ -1,3 +1,3 @@
 @echo off
-sc create echoservice binPath= \\"$$system_path($${target.path}\\\\$${TARGET}.exe) --backend windows\\" start= demand displayname= \\"%{ProjectName} Service\\" || exit /B 1
-sc description echoservice \\"The Echo Service\\" || exit /B 1
+sc create WeBookServer binPath= \\"$$system_path($${target.path}\\\\$${TARGET}.exe) --backend windows\\" start= demand displayname= \\"%{ProjectName} Service\\" || exit /B 1
+sc description WeBookServer \\"The WeBookServer Service\\" || exit /B 1
