--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -25,7 +25,7 @@ install:
   - '%QTDIR%\bin\qtenv2.bat'
   - set PRJLIBDIR=%WINDIR%\SysWOW64 # Find vclibs
   - set PATH=%QTDIR%\bin;C:\Qt\%QTVER%\bin;%PATH%
-  - pip3 install qdep
+  - pip install qdep
 
 configuration:
   - release
